--- a/GroupConnect/res/values/strings.xml
+++ b/GroupConnect/res/values/strings.xml
@@ -4,8 +4,29 @@
     <string name="app_name">GroupConnect</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="contDesc_Search">Search</string>
+    <string name="title_search">Search</string>
+    <string name="title_setup">Set Up</string>
+    <string name="title_yourgroups">Your Groups</string>
     <string name="searchMenu_category">Category</string>
     <string name="searchMenu_grpfilter">Group Filter</string>
+    <string name="title_activity_main_menu">MainMenu</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_activity_menu">Menu</string>
+    <string name="title_activity_register">Register</string>
+    <string name="register_title_header">GroupConnect Registration</string>
+    <string name="register_fname">First Name</string>
+    <string name="register_lname">Last Name</string>
+    <string name="register_username">User Name</string>
+    <string name="register_email">Email</string>
+    <string name="register_address">Address</string>
+    <string name="register_address_examp">53 Ang Mo Kio Avenue 3</string>
+    <string name="register_address_postCode">Post Code</string>
+    <string name="register_address_postCode_examp">569933</string>
+    <string name="register_pw">Password</string>
+    <string name="register_bn_register">Register</string>
+    <string name="register_bn_to_login">Back to Login</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
