--- a/GroupConnect/res/values/strings.xml
+++ b/GroupConnect/res/values/strings.xml
@@ -33,6 +33,29 @@
         <item>M</item>
     </string-array>
     
+    <string-array name="listOfNo">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+    </string-array>
+    
     <string name="title_activity_nearbyrm">Nearby Rooms</string>
 
     <string name="activity_room_info_title">Title: </string>
@@ -53,6 +76,7 @@
     <string name="title_activity_manage_room">ManageRoom</string>
     <string name="title_activity_notification_display">NotificationDisplay</string>
     <string name="title_activity_create_rm_step2">CreateRmStep2</string>
+    <string name="title_activity_create_rm_step3">CreateRmStep3</string>
 
     <!-- Push Notification -->
     <string name="send_notification">Send myself a Notification</string>
