--- a/GroupConnect/res/values/strings.xml
+++ b/GroupConnect/res/values/strings.xml
@@ -88,7 +88,7 @@
     
     <!-- Profile Pref -->
     <string name="ppf_ttl_profrel">Your Profile</string>
-    <string name="ppf_ttl_prof_interests">Your Name</string>
+    <string name="ppf_ttl_prof_name">Your Name</string>
     <string name="ppf_diag_ttl_name">Edit your name</string>
     <!-- Room Pref -->
     <string name="ppf_ttl_roomrel">Room Related Settings</string>
